--- a/index.html
+++ b/index.html
@@ -1,59 +1,51 @@
-<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Trivia Game</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
-</head>
-<body>
-    <div class="container">
-      <header>
-        <h1 class="title">90's Rock Trivia</h1>
-      </header>
-    
-      <div id="start-panel" class="first">
-        <h3>ARE YOU READY TO ROCK?<br>SMASH THE BUTTON BELOW!</h3>
-        <button id="start">Let's GO!</button>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>TriviaGame</title>
+    <meta name="example timer" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="../TriviaGame/assets/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous"
+    />
+  </head>
+
+  <body>
+    <div id="wrapper">
+      <div id="gradient">
+        <div class="container">
+          <section class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12">
+              <div class="jumbotron animated zoomIn">
+                  <iframe width="100%" height="80" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/102912843&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+                <h1>90's Rock Trivia!</h1>
+                <h5 class="timeRemaining"></h5>
+                <h3 class="question questionHeader"></h3>
+                <div class="answers"></div>
+                <p class="start-button text-center animated zoomInDown">
+                  <a
+                    class="btn btn-primary btn-lg startButton animated pulse infinite"
+                    href="#"
+                    role="button"
+                  >
+                    START!
+                  </a>
+                </p>
+              </div>
+            </div>
+          </section>
+        </div>
       </div>
-
-      <div id="questions-panel">
-        <h3>Time Remaining: <span id="time-left">45</span></h3>
-        <h3 id="question"></h3>
-        <h5 id="choices"></h5>
-        <div id="image-holder"></div>
-      </div>
-
-
-
-      <div id="results-panel">
-
-
-      </div>
-
-     
     </div>
- <footer>
-        <p>&copy; Faran Navazi</p>
-      </footer>
-
-    <!-- JavaScript links right here!!! -->
     <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      src="https://code.jquery.com/jquery-3.2.1.min.js"
+      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
       crossorigin="anonymous"
     ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
-    <script src="assets/javascript/game.js" type="text/javascript"></script>
-</body>
+    <script src="assets/javascript/game.js"></script>
+  </body>
 </html>
